fix: make global container's right padding smaller to account for scrollbar on desktop

--- a/shelter/pages/main/scss/_layout.scss
+++ b/shelter/pages/main/scss/_layout.scss
@@ -20,7 +20,7 @@
 
 .header {
   width: 100%;
-  padding-right: 40px;
+  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
   padding-left: 40px;
   display: flex;
   justify-content: space-between;
@@ -93,7 +93,7 @@
 
 .section {
   padding-top: 80px;
-  padding-right: 40px;
+  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
   padding-left: 40px;
 
   &--dark {
@@ -285,7 +285,7 @@
 // Footer
 .footer {
   padding-top: 40px;
-  padding-right: 40px;
+  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
   padding-left: 40px;
   background: url('../../../assets/images/main/noise_transparent@2x.png'),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%),
