--- a/shelter/pages/main/scss/main.css
+++ b/shelter/pages/main/scss/main.css
@@ -398,14 +398,14 @@ inherit from the parent box-sizing
 }
 
 /* Make sure children take 
-full height of its partent */
+full height of its parent */
 html,
 body {
   height: 100%;
   min-height: 100vh;
 }
 
-/* Clear defaukt html margins */
+/* Clear default html margins */
 body,
 h1,
 h2,
@@ -758,7 +758,7 @@ a:hover {
 
 .header {
   width: 100%;
-  padding-right: 40px;
+  padding-right: 23px;
   padding-left: 40px;
   display: flex;
   justify-content: space-between;
@@ -821,7 +821,7 @@ a:hover {
 
 .section {
   padding-top: 80px;
-  padding-right: 40px;
+  padding-right: 23px;
   padding-left: 40px;
 }
 .section--dark {
@@ -981,7 +981,7 @@ a:hover {
 
 .footer {
   padding-top: 40px;
-  padding-right: 40px;
+  padding-right: 23px;
   padding-left: 40px;
   background: url("../../../assets/images/main/noise_transparent@2x.png"), radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), linear-gradient(0deg, #211f20, #211f20);
 }
