--- a/shelter/pages/pets/scss/_layout.scss
+++ b/shelter/pages/pets/scss/_layout.scss
@@ -16,7 +16,7 @@
 // Header
 .header {
   width: 100%;
-  padding-right: 40px;
+  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
   padding-left: 40px;
   display: flex;
   justify-content: space-between;
@@ -116,7 +116,7 @@
 
 .section {
   padding-top: 80px;
-  padding-right: 40px;
+  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
   padding-left: 40px;
 
   &--dark {
@@ -152,7 +152,7 @@
 // Footer
 .footer {
   padding-top: 40px;
-  padding-right: 40px;
+  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
   padding-left: 40px;
   background: url('../../../assets/images/main/noise_transparent@2x.png'),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%),
